# esp32-gamepad-bluetooth

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
.github/workflows/: build.yml
main/: CMakeLists.txt  hid_device_le_prf.c  hidd_le_prf_int.h  usb_ble_gamepad_bridge_main.c
